--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "passport-local": "^1.0.0",
     "react": "^15.1.0",
     "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.1.0"
+    "react-dom": "^15.1.0",
+    "toastr": "^2.1.2"
   }
 }
